# wyoming-xtts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  server.py
scripts/: check_speed_override.py
tests/: test_cli.py  test_handler.py  test_synthesizer.py
xtts_wyoming/: __init__.py  __main__.py  audio.py  handler.py  server.py  speaker_store.py  synthesizer.py  text.py  wyoming_protocol.py
xtts_wyoming/templates/: index.html
